<resources>
    <string name="app_name">CSCodeTest</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Log In</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="logout">Logout</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="adding_product">Adding Product</string>
    <string name="add_item">Add Item</string>
    <string name="product_name">Product Name</string>
    <string name="product_description">Product Description</string>
    <string name="product_brand">Product Brand</string>
    <string name="shipping_price">Shipping Price</string>
    <string name="product_style">Product Style</string>
    <string name="create_product">Create Product</string>
    <string name="back">Back</string>
</resources>